--- a/archives/toutiao-search/2024-02-18.md
+++ b/archives/toutiao-search/2024-02-18.md
@@ -1,72 +1,79 @@
 # 2024-02-18
 
-共 141 条
+共 148 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sun Feb 18 2024 09:40:55 GMT+0800 (China Standard Time) -->
-1. [男子带母亲试毛衣后未买遭店员嘲讽](https://so.toutiao.com/search?keyword=男子带母亲试毛衣后未买遭店员嘲讽)
-1. [今年还有4次调休](https://so.toutiao.com/search?keyword=今年还有4次调休)
-1. [8组数据看热气腾腾的春节](https://so.toutiao.com/search?keyword=8组数据看热气腾腾的春节)
+<!-- 最后更新时间 Sun Feb 18 2024 10:14:31 GMT+0800 (China Standard Time) -->
 1. [新疆特强沙尘暴：天空赤橙像异世界](https://so.toutiao.com/search?keyword=新疆特强沙尘暴：天空赤橙像异世界)
+1. [男子带母亲试毛衣后未买遭店员嘲讽](https://so.toutiao.com/search?keyword=男子带母亲试毛衣后未买遭店员嘲讽)
+1. [8组数据看热气腾腾的春节](https://so.toutiao.com/search?keyword=8组数据看热气腾腾的春节)
+1. [今年还有4次调休](https://so.toutiao.com/search?keyword=今年还有4次调休)
+1. [新疆14级大风](https://so.toutiao.com/search?keyword=新疆14级大风)
 1. [国台办再回应2名大陆渔民遇难](https://so.toutiao.com/search?keyword=国台办再回应2名大陆渔民遇难)
 1. [网友去年就在小区拍到瘦了的贾玲](https://so.toutiao.com/search?keyword=网友去年就在小区拍到瘦了的贾玲)
-1. [新疆14级大风](https://so.toutiao.com/search?keyword=新疆14级大风)
+1. [王毅面对慕安会主席的邀请开怀大笑](https://so.toutiao.com/search?keyword=王毅面对慕安会主席的邀请开怀大笑)
 1. [过年你花了多少钱](https://so.toutiao.com/search?keyword=过年你花了多少钱)
-1. [老人旅游时睡梦中去世 家属起诉旅行社](https://so.toutiao.com/search?keyword=老人旅游时睡梦中去世+家属起诉旅行社)
-1. [浙江青田挖笋失联村民已无生命体征](https://so.toutiao.com/search?keyword=浙江青田挖笋失联村民已无生命体征)
+1. [乌称从阿夫杰耶夫卡撤军是正确决定](https://so.toutiao.com/search?keyword=乌称从阿夫杰耶夫卡撤军是正确决定)
 1. [丽江文旅立案处理未买手镯被赶下车](https://so.toutiao.com/search?keyword=丽江文旅立案处理未买手镯被赶下车)
 1. [水果越酸维C含量越高？不一定](https://so.toutiao.com/search?keyword=水果越酸维C含量越高？不一定)
-1. [王毅面对慕安会主席的邀请开怀大笑](https://so.toutiao.com/search?keyword=王毅面对慕安会主席的邀请开怀大笑)
+1. [高速上堵车 货车师傅开始做饭了](https://so.toutiao.com/search?keyword=高速上堵车+货车师傅开始做饭了)
 1. [丽江游客回应不买5万玉器被赶下车](https://so.toutiao.com/search?keyword=丽江游客回应不买5万玉器被赶下车)
-1. [海南离岛小车堵到“∞”型转圈圈](https://so.toutiao.com/search?keyword=海南离岛小车堵到“∞”型转圈圈)
-1. [春节档电影好看吗](https://so.toutiao.com/search?keyword=春节档电影好看吗)
 1. [接连四部电影宣布撤出春节档](https://so.toutiao.com/search?keyword=接连四部电影宣布撤出春节档)
-1. [传比亚迪秦plus dmi将官降到7.98万](https://so.toutiao.com/search?keyword=传比亚迪秦plus+dmi将官降到7.98万)
-1. [自驾海南新能源车主抢老爸油车返程](https://so.toutiao.com/search?keyword=自驾海南新能源车主抢老爸油车返程)
+1. [春节档电影好看吗](https://so.toutiao.com/search?keyword=春节档电影好看吗)
+1. [海南离岛小车堵到“∞”型转圈圈](https://so.toutiao.com/search?keyword=海南离岛小车堵到“∞”型转圈圈)
+1. [浙江青田挖笋失联村民已无生命体征](https://so.toutiao.com/search?keyword=浙江青田挖笋失联村民已无生命体征)
+1. [甘肃酒泉全力安置数万名滞留旅客](https://so.toutiao.com/search?keyword=甘肃酒泉全力安置数万名滞留旅客)
 1. [女子返程高速4小时走了两三公里](https://so.toutiao.com/search?keyword=女子返程高速4小时走了两三公里)
+1. [传比亚迪秦plus dmi将官降到7.98万](https://so.toutiao.com/search?keyword=传比亚迪秦plus+dmi将官降到7.98万)
 1. [狗子在高速被堵到生下一窝狗崽](https://so.toutiao.com/search?keyword=狗子在高速被堵到生下一窝狗崽)
-1. [透过十四冬看见中国冰雪运动的新意](https://so.toutiao.com/search?keyword=透过十四冬看见中国冰雪运动的新意)
-1. [以色列总理：反对承认巴勒斯坦国](https://so.toutiao.com/search?keyword=以色列总理：反对承认巴勒斯坦国)
+1. [自驾海南新能源车主抢老爸油车返程](https://so.toutiao.com/search?keyword=自驾海南新能源车主抢老爸油车返程)
+1. [龙年这波玩的有点秀](https://so.toutiao.com/search?keyword=龙年这波玩的有点秀)
+1. [王毅：巴勒斯坦几代民众颠沛流离](https://so.toutiao.com/search?keyword=王毅：巴勒斯坦几代民众颠沛流离)
+1. [多家巨头谋划布局AI基础设施](https://so.toutiao.com/search?keyword=多家巨头谋划布局AI基础设施)
+1. [老人旅游时睡梦中去世 家属起诉旅行社](https://so.toutiao.com/search?keyword=老人旅游时睡梦中去世+家属起诉旅行社)
+1. [王毅：中国从来没有发动过战争](https://so.toutiao.com/search?keyword=王毅：中国从来没有发动过战争)
 1. [湖南省南县捣毁一卖淫窝点 6人被抓](https://so.toutiao.com/search?keyword=湖南省南县捣毁一卖淫窝点+6人被抓)
+1. [小学生寒假作业被弄丢 民警帮找回](https://so.toutiao.com/search?keyword=小学生寒假作业被弄丢+民警帮找回)
+1. [女子把马桶坐坏遭全家人围观](https://so.toutiao.com/search?keyword=女子把马桶坐坏遭全家人围观)
 1. [女子输错导航被丈夫怒抛高速](https://so.toutiao.com/search?keyword=女子输错导航被丈夫怒抛高速)
+1. [高速堵车有司机呼呼大睡](https://so.toutiao.com/search?keyword=高速堵车有司机呼呼大睡)
 1. [欢乐家长群戴静公司强制捐款](https://so.toutiao.com/search?keyword=欢乐家长群戴静公司强制捐款)
-1. [三预警齐发！我国大部地区剧烈降温](https://so.toutiao.com/search?keyword=三预警齐发！我国大部地区剧烈降温)
+1. [如何评价断亲现象](https://so.toutiao.com/search?keyword=如何评价断亲现象)
+1. [罗德里英超中对Big6已打进5球](https://so.toutiao.com/search?keyword=罗德里英超中对Big6已打进5球)
+1. [大学生寒假给爷爷奶奶劈柴700多斤](https://so.toutiao.com/search?keyword=大学生寒假给爷爷奶奶劈柴700多斤)
+1. [学者谈“断亲”：主动社交意识觉醒](https://so.toutiao.com/search?keyword=学者谈“断亲”：主动社交意识觉醒)
+1. [以色列总理：反对承认巴勒斯坦国](https://so.toutiao.com/search?keyword=以色列总理：反对承认巴勒斯坦国)
+1. [《热辣滚烫》贾玲的对手是云南姑娘](https://so.toutiao.com/search?keyword=《热辣滚烫》贾玲的对手是云南姑娘)
+1. [央行开展5000亿元1年期MLF操作](https://so.toutiao.com/search?keyword=央行开展5000亿元1年期MLF操作)
 1. [男生扮滴滴司机送女友回家](https://so.toutiao.com/search?keyword=男生扮滴滴司机送女友回家)
+1. [一家人旅游时摆摊3天赚1000多](https://so.toutiao.com/search?keyword=一家人旅游时摆摊3天赚1000多)
+1. [美国抗议者在佩洛西家门口倒粪](https://so.toutiao.com/search?keyword=美国抗议者在佩洛西家门口倒粪)
+1. [本轮美联储快速加息策略为何成功](https://so.toutiao.com/search?keyword=本轮美联储快速加息策略为何成功)
+1. [航拍狼群穿越雪山](https://so.toutiao.com/search?keyword=航拍狼群穿越雪山)
+1. [2024还有这些假期](https://so.toutiao.com/search?keyword=2024还有这些假期)
+1. [初六返程12小时路开了25小时](https://so.toutiao.com/search?keyword=初六返程12小时路开了25小时)
+1. [三预警齐发！我国大部地区剧烈降温](https://so.toutiao.com/search?keyword=三预警齐发！我国大部地区剧烈降温)
+1. [女婿新年拜访岳父 酒后打醉拳助兴](https://so.toutiao.com/search?keyword=女婿新年拜访岳父+酒后打醉拳助兴)
+1. [透过十四冬看见中国冰雪运动的新意](https://so.toutiao.com/search?keyword=透过十四冬看见中国冰雪运动的新意)
 1. [武大靖点燃十四冬火炬](https://so.toutiao.com/search?keyword=武大靖点燃十四冬火炬)
 1. [曼城本赛季在落后情况下追回18分](https://so.toutiao.com/search?keyword=曼城本赛季在落后情况下追回18分)
-1. [如何评价断亲现象](https://so.toutiao.com/search?keyword=如何评价断亲现象)
-1. [多家巨头谋划布局AI基础设施](https://so.toutiao.com/search?keyword=多家巨头谋划布局AI基础设施)
 1. [王毅：维护台海稳定必须反对“台独”](https://so.toutiao.com/search?keyword=王毅：维护台海稳定必须反对“台独”)
-1. [学者谈“断亲”：主动社交意识觉醒](https://so.toutiao.com/search?keyword=学者谈“断亲”：主动社交意识觉醒)
 1. [记者：阿德巴约将成为全明星首发](https://so.toutiao.com/search?keyword=记者：阿德巴约将成为全明星首发)
-1. [女子把马桶坐坏遭全家人围观](https://so.toutiao.com/search?keyword=女子把马桶坐坏遭全家人围观)
-1. [高速上堵车 货车师傅开始做饭了](https://so.toutiao.com/search?keyword=高速上堵车+货车师傅开始做饭了)
-1. [一家人旅游时摆摊3天赚1000多](https://so.toutiao.com/search?keyword=一家人旅游时摆摊3天赚1000多)
 1. [普京催促33岁电力公司员工要孩子](https://so.toutiao.com/search?keyword=普京催促33岁电力公司员工要孩子)
 1. [丈母娘买三个冰柜存放准备的吃食](https://so.toutiao.com/search?keyword=丈母娘买三个冰柜存放准备的吃食)
-1. [女婿新年拜访岳父 酒后打醉拳助兴](https://so.toutiao.com/search?keyword=女婿新年拜访岳父+酒后打醉拳助兴)
 1. [印度男子怀疑妻子不忠将其斩首](https://so.toutiao.com/search?keyword=印度男子怀疑妻子不忠将其斩首)
-1. [罗德里英超中对Big6已打进5球](https://so.toutiao.com/search?keyword=罗德里英超中对Big6已打进5球)
 1. [左右哥“再就业”](https://so.toutiao.com/search?keyword=左右哥“再就业”)
 1. [Sora大模型会让影视人失业吗](https://so.toutiao.com/search?keyword=Sora大模型会让影视人失业吗)
-1. [航拍狼群穿越雪山](https://so.toutiao.com/search?keyword=航拍狼群穿越雪山)
-1. [本轮美联储快速加息策略为何成功](https://so.toutiao.com/search?keyword=本轮美联储快速加息策略为何成功)
 1. [男子返程在车上忍不住默默流泪](https://so.toutiao.com/search?keyword=男子返程在车上忍不住默默流泪)
-1. [《热辣滚烫》贾玲的对手是云南姑娘](https://so.toutiao.com/search?keyword=《热辣滚烫》贾玲的对手是云南姑娘)
-1. [甘肃酒泉全力安置数万名滞留旅客](https://so.toutiao.com/search?keyword=甘肃酒泉全力安置数万名滞留旅客)
 1. [乌军从顿涅茨克地区重镇撤军](https://so.toutiao.com/search?keyword=乌军从顿涅茨克地区重镇撤军)
 1. [俄方称俄军已完全控制阿夫杰耶夫卡](https://so.toutiao.com/search?keyword=俄方称俄军已完全控制阿夫杰耶夫卡)
 1. [航运公司回应被指过海效率低](https://so.toutiao.com/search?keyword=航运公司回应被指过海效率低)
 1. [“断亲潮”风靡 需对亲情重新反思](https://so.toutiao.com/search?keyword=“断亲潮”风靡+需对亲情重新反思)
 1. [女子高速上遭遇沙尘暴 车窗被砸烂](https://so.toutiao.com/search?keyword=女子高速上遭遇沙尘暴+车窗被砸烂)
 1. [让贾玲觉得幸福的食物是全麦面包](https://so.toutiao.com/search?keyword=让贾玲觉得幸福的食物是全麦面包)
-1. [初六返程12小时路开了25小时](https://so.toutiao.com/search?keyword=初六返程12小时路开了25小时)
-1. [2024还有这些假期](https://so.toutiao.com/search?keyword=2024还有这些假期)
 1. [正月初九祝福久久](https://so.toutiao.com/search?keyword=正月初九祝福久久)
 1. [女子过完年后归家发现厨房污水倒灌](https://so.toutiao.com/search?keyword=女子过完年后归家发现厨房污水倒灌)
 1. [蓝军打破在伊蒂哈德402分钟进球荒](https://so.toutiao.com/search?keyword=蓝军打破在伊蒂哈德402分钟进球荒)
-1. [高速堵车有司机呼呼大睡](https://so.toutiao.com/search?keyword=高速堵车有司机呼呼大睡)
-1. [美国抗议者在佩洛西家门口倒粪](https://so.toutiao.com/search?keyword=美国抗议者在佩洛西家门口倒粪)
 1. [C罗连场破门](https://so.toutiao.com/search?keyword=C罗连场破门)
 1. [学者：未婚农村男性不再焦虑婚姻](https://so.toutiao.com/search?keyword=学者：未婚农村男性不再焦虑婚姻)
 1. [春节返程那些让人泪目的离别瞬间](https://so.toutiao.com/search?keyword=春节返程那些让人泪目的离别瞬间)
