--- a/archives/toutiao-search/2024-02-18.md
+++ b/archives/toutiao-search/2024-02-18.md
@@ -1,57 +1,72 @@
 # 2024-02-18
 
-共 233 条
+共 247 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sun Feb 18 2024 15:00:33 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sun Feb 18 2024 16:00:50 GMT+0800 (China Standard Time) -->
 1. [中国海警在厦金海域开展执法行动](https://so.toutiao.com/search?keyword=中国海警在厦金海域开展执法行动)
+1. [俄方称俄军已完全控制阿夫杰耶夫卡](https://so.toutiao.com/search?keyword=俄方称俄军已完全控制阿夫杰耶夫卡)
+1. [春节国内出游人次创新高](https://so.toutiao.com/search?keyword=春节国内出游人次创新高)
+1. [司机卡点最后一分钟免费下高速](https://so.toutiao.com/search?keyword=司机卡点最后一分钟免费下高速)
+1. [贾玲烫了大波浪穿礼服唱歌](https://so.toutiao.com/search?keyword=贾玲烫了大波浪穿礼服唱歌)
+1. [江苏一工厂爆炸致3死2失联](https://so.toutiao.com/search?keyword=江苏一工厂爆炸致3死2失联)
+1. [小车零点后下高速被收全程费用](https://so.toutiao.com/search?keyword=小车零点后下高速被收全程费用)
+1. [甘肃酒泉4万名滞留旅客已被安置](https://so.toutiao.com/search?keyword=甘肃酒泉4万名滞留旅客已被安置)
+1. [国产三蹦子今年可能去海外建厂](https://so.toutiao.com/search?keyword=国产三蹦子今年可能去海外建厂)
+1. [女子在银行着急办业务跪地求号](https://so.toutiao.com/search?keyword=女子在银行着急办业务跪地求号)
+1. [因堵车延迟下高速应付全程高速费吗](https://so.toutiao.com/search?keyword=因堵车延迟下高速应付全程高速费吗)
+1. [演员李勤勤收养周海媚爱犬](https://so.toutiao.com/search?keyword=演员李勤勤收养周海媚爱犬)
+1. [海鲜与维C不能同吃？谣言](https://so.toutiao.com/search?keyword=海鲜与维C不能同吃？谣言)
+1. [航拍江苏一工厂爆炸：现场一片狼藉](https://so.toutiao.com/search?keyword=航拍江苏一工厂爆炸：现场一片狼藉)
+1. [刚服完刑男子杀一家人？警方回应](https://so.toutiao.com/search?keyword=刚服完刑男子杀一家人？警方回应)
+1. [今年还有4次调休](https://so.toutiao.com/search?keyword=今年还有4次调休)
+1. [网友去年就在小区拍到瘦了的贾玲](https://so.toutiao.com/search?keyword=网友去年就在小区拍到瘦了的贾玲)
+1. [王毅会见阿根廷外长蒙迪诺](https://so.toutiao.com/search?keyword=王毅会见阿根廷外长蒙迪诺)
+1. [新疆特强沙尘暴：天空赤橙像异世界](https://so.toutiao.com/search?keyword=新疆特强沙尘暴：天空赤橙像异世界)
+1. [马丽第一次见赵丽颖想抱抱她](https://so.toutiao.com/search?keyword=马丽第一次见赵丽颖想抱抱她)
+1. [王毅：统一必将实现](https://so.toutiao.com/search?keyword=王毅：统一必将实现)
+1. [《摔跤吧！爸爸》小芭比塔演员去世](https://so.toutiao.com/search?keyword=《摔跤吧！爸爸》小芭比塔演员去世)
+1. [A股节后能否“开门红”](https://so.toutiao.com/search?keyword=A股节后能否“开门红”)
+1. [高速堵车有司机呼呼大睡](https://so.toutiao.com/search?keyword=高速堵车有司机呼呼大睡)
+1. [1家5口从三亚飞回新疆要花10万](https://so.toutiao.com/search?keyword=1家5口从三亚飞回新疆要花10万)
+1. [谭德塞就暴发“X疾病”可能性警告](https://so.toutiao.com/search?keyword=谭德塞就暴发“X疾病”可能性警告)
+1. [日本女生在中国朋友家过年看抗日剧](https://so.toutiao.com/search?keyword=日本女生在中国朋友家过年看抗日剧)
+1. [老人旅游时睡梦中去世 家属起诉旅行社](https://so.toutiao.com/search?keyword=老人旅游时睡梦中去世+家属起诉旅行社)
+1. [新疆14级大风](https://so.toutiao.com/search?keyword=新疆14级大风)
+1. [浙江青田挖笋失联村民已无生命体征](https://so.toutiao.com/search?keyword=浙江青田挖笋失联村民已无生命体征)
+1. [传比亚迪秦plus dmi将官降到7.98万](https://so.toutiao.com/search?keyword=传比亚迪秦plus+dmi将官降到7.98万)
+1. [湖南一洒水车碾压路人后逃逸](https://so.toutiao.com/search?keyword=湖南一洒水车碾压路人后逃逸)
+1. [堵车把车里的阿拉斯加堵哭了](https://so.toutiao.com/search?keyword=堵车把车里的阿拉斯加堵哭了)
+1. [沈忠祥少将逝世](https://so.toutiao.com/search?keyword=沈忠祥少将逝世)
+1. [Sora的真正价值在哪](https://so.toutiao.com/search?keyword=Sora的真正价值在哪)
+1. [王毅：中国从来没有发动过战争](https://so.toutiao.com/search?keyword=王毅：中国从来没有发动过战争)
+1. [加沙超2.88万人死于本轮巴以冲突](https://so.toutiao.com/search?keyword=加沙超2.88万人死于本轮巴以冲突)
+1. [甘肃多地为滞留旅客提供免费住宿](https://so.toutiao.com/search?keyword=甘肃多地为滞留旅客提供免费住宿)
+1. [外媒：美国阿拉斯加州分离情绪高涨](https://so.toutiao.com/search?keyword=外媒：美国阿拉斯加州分离情绪高涨)
+1. [第二十条帮的是每个普通人](https://so.toutiao.com/search?keyword=第二十条帮的是每个普通人)
+1. [颜宁称在深圳已梦想成真](https://so.toutiao.com/search?keyword=颜宁称在深圳已梦想成真)
+1. [海南离岛小车堵到“∞”型转圈圈](https://so.toutiao.com/search?keyword=海南离岛小车堵到“∞”型转圈圈)
+1. [“AIT”处长为何拜会韩国瑜](https://so.toutiao.com/search?keyword=“AIT”处长为何拜会韩国瑜)
+1. [拜登痛斥众议院关键时刻去“度假”](https://so.toutiao.com/search?keyword=拜登痛斥众议院关键时刻去“度假”)
+1. [专家建议上班第一天少干点活](https://so.toutiao.com/search?keyword=专家建议上班第一天少干点活)
+1. [女子高速遇陌生男子爬车顶抢方向盘](https://so.toutiao.com/search?keyword=女子高速遇陌生男子爬车顶抢方向盘)
+1. [三亚机票今年为何涨得那么猛](https://so.toutiao.com/search?keyword=三亚机票今年为何涨得那么猛)
+1. [湖南省南县捣毁一卖淫窝点 6人被抓](https://so.toutiao.com/search?keyword=湖南省南县捣毁一卖淫窝点+6人被抓)
+1. [广东实施基础研究十年“卓粤”计划](https://so.toutiao.com/search?keyword=广东实施基础研究十年“卓粤”计划)
+1. [高三班主任强吻女学生被停职](https://so.toutiao.com/search?keyword=高三班主任强吻女学生被停职)
 1. [三亚部分返程机票回落至3000元档](https://so.toutiao.com/search?keyword=三亚部分返程机票回落至3000元档)
 1. [中国经济新春面面观](https://so.toutiao.com/search?keyword=中国经济新春面面观)
-1. [俄方称俄军已完全控制阿夫杰耶夫卡](https://so.toutiao.com/search?keyword=俄方称俄军已完全控制阿夫杰耶夫卡)
-1. [贾玲烫了大波浪穿礼服唱歌](https://so.toutiao.com/search?keyword=贾玲烫了大波浪穿礼服唱歌)
-1. [1家5口从三亚飞回新疆要花10万](https://so.toutiao.com/search?keyword=1家5口从三亚飞回新疆要花10万)
-1. [老人旅游时睡梦中去世 家属起诉旅行社](https://so.toutiao.com/search?keyword=老人旅游时睡梦中去世+家属起诉旅行社)
 1. [高速堵车男子摆摊卖炒面](https://so.toutiao.com/search?keyword=高速堵车男子摆摊卖炒面)
-1. [日本女生在中国朋友家过年看抗日剧](https://so.toutiao.com/search?keyword=日本女生在中国朋友家过年看抗日剧)
 1. [男子腌500条“火腿”送亲戚朋友](https://so.toutiao.com/search?keyword=男子腌500条“火腿”送亲戚朋友)
-1. [因堵车延迟下高速应付全程高速费吗](https://so.toutiao.com/search?keyword=因堵车延迟下高速应付全程高速费吗)
-1. [王毅：中国从来没有发动过战争](https://so.toutiao.com/search?keyword=王毅：中国从来没有发动过战争)
-1. [海鲜与维C不能同吃？谣言](https://so.toutiao.com/search?keyword=海鲜与维C不能同吃？谣言)
-1. [小车零点后下高速被收全程费用](https://so.toutiao.com/search?keyword=小车零点后下高速被收全程费用)
-1. [高速堵车有司机呼呼大睡](https://so.toutiao.com/search?keyword=高速堵车有司机呼呼大睡)
 1. [丽江文旅立案处理未买手镯被赶下车](https://so.toutiao.com/search?keyword=丽江文旅立案处理未买手镯被赶下车)
-1. [女子在银行着急办业务跪地求号](https://so.toutiao.com/search?keyword=女子在银行着急办业务跪地求号)
-1. [网友去年就在小区拍到瘦了的贾玲](https://so.toutiao.com/search?keyword=网友去年就在小区拍到瘦了的贾玲)
-1. [刚服完刑男子杀一家人？警方回应](https://so.toutiao.com/search?keyword=刚服完刑男子杀一家人？警方回应)
 1. [湖南开展解放思想大讨论](https://so.toutiao.com/search?keyword=湖南开展解放思想大讨论)
-1. [新疆特强沙尘暴：天空赤橙像异世界](https://so.toutiao.com/search?keyword=新疆特强沙尘暴：天空赤橙像异世界)
-1. [王毅：统一必将实现](https://so.toutiao.com/search?keyword=王毅：统一必将实现)
-1. [Sora的真正价值在哪](https://so.toutiao.com/search?keyword=Sora的真正价值在哪)
-1. [《摔跤吧！爸爸》小芭比塔演员去世](https://so.toutiao.com/search?keyword=《摔跤吧！爸爸》小芭比塔演员去世)
 1. [魅族宣布全面押注AI](https://so.toutiao.com/search?keyword=魅族宣布全面押注AI)
 1. [让贾玲觉得幸福的食物是全麦面包](https://so.toutiao.com/search?keyword=让贾玲觉得幸福的食物是全麦面包)
-1. [今年还有4次调休](https://so.toutiao.com/search?keyword=今年还有4次调休)
-1. [传比亚迪秦plus dmi将官降到7.98万](https://so.toutiao.com/search?keyword=传比亚迪秦plus+dmi将官降到7.98万)
-1. [司机卡点最后一分钟免费下高速](https://so.toutiao.com/search?keyword=司机卡点最后一分钟免费下高速)
-1. [甘肃酒泉4万名滞留旅客已被安置](https://so.toutiao.com/search?keyword=甘肃酒泉4万名滞留旅客已被安置)
-1. [专家建议上班第一天少干点活](https://so.toutiao.com/search?keyword=专家建议上班第一天少干点活)
-1. [三亚机票今年为何涨得那么猛](https://so.toutiao.com/search?keyword=三亚机票今年为何涨得那么猛)
-1. [新疆14级大风](https://so.toutiao.com/search?keyword=新疆14级大风)
 1. [周鸿祎详解Sora文生视频](https://so.toutiao.com/search?keyword=周鸿祎详解Sora文生视频)
-1. [堵车把车里的阿拉斯加堵哭了](https://so.toutiao.com/search?keyword=堵车把车里的阿拉斯加堵哭了)
 1. [河南10岁男孩被烟花炸伤身亡](https://so.toutiao.com/search?keyword=河南10岁男孩被烟花炸伤身亡)
-1. [国产三蹦子今年可能去海外建厂](https://so.toutiao.com/search?keyword=国产三蹦子今年可能去海外建厂)
-1. [女子高速遇陌生男子爬车顶抢方向盘](https://so.toutiao.com/search?keyword=女子高速遇陌生男子爬车顶抢方向盘)
-1. [谭德塞就暴发“X疾病”可能性警告](https://so.toutiao.com/search?keyword=谭德塞就暴发“X疾病”可能性警告)
-1. [马丽第一次见赵丽颖想抱抱她](https://so.toutiao.com/search?keyword=马丽第一次见赵丽颖想抱抱她)
 1. [中国缘何连续两个月增持美国国债](https://so.toutiao.com/search?keyword=中国缘何连续两个月增持美国国债)
 1. [钟南山：推进面向人民健康科技创新](https://so.toutiao.com/search?keyword=钟南山：推进面向人民健康科技创新)
-1. [湖南省南县捣毁一卖淫窝点 6人被抓](https://so.toutiao.com/search?keyword=湖南省南县捣毁一卖淫窝点+6人被抓)
-1. [沈忠祥少将逝世](https://so.toutiao.com/search?keyword=沈忠祥少将逝世)
-1. [浙江青田挖笋失联村民已无生命体征](https://so.toutiao.com/search?keyword=浙江青田挖笋失联村民已无生命体征)
-1. [湖南一洒水车碾压路人后逃逸](https://so.toutiao.com/search?keyword=湖南一洒水车碾压路人后逃逸)
 1. [俄军用喇叭播报阵亡乌军名单](https://so.toutiao.com/search?keyword=俄军用喇叭播报阵亡乌军名单)
-1. [海南离岛小车堵到“∞”型转圈圈](https://so.toutiao.com/search?keyword=海南离岛小车堵到“∞”型转圈圈)
 1. [周杰伦昆凌看霉霉演唱会](https://so.toutiao.com/search?keyword=周杰伦昆凌看霉霉演唱会)
 1. [教育局回应高三女生称遭班主任猥亵](https://so.toutiao.com/search?keyword=教育局回应高三女生称遭班主任猥亵)
 1. [乌称从阿夫杰耶夫卡撤军是正确决定](https://so.toutiao.com/search?keyword=乌称从阿夫杰耶夫卡撤军是正确决定)
@@ -165,7 +180,6 @@
 1. [C罗连场破门](https://so.toutiao.com/search?keyword=C罗连场破门)
 1. [学者：未婚农村男性不再焦虑婚姻](https://so.toutiao.com/search?keyword=学者：未婚农村男性不再焦虑婚姻)
 1. [一艘油轮在红海被导弹击中](https://so.toutiao.com/search?keyword=一艘油轮在红海被导弹击中)
-1. [外媒：美国阿拉斯加州分离情绪高涨](https://so.toutiao.com/search?keyword=外媒：美国阿拉斯加州分离情绪高涨)
 1. [克宫：普京已知悉纳瓦利内死讯](https://so.toutiao.com/search?keyword=克宫：普京已知悉纳瓦利内死讯)
 1. [海南计划新增航班194架次](https://so.toutiao.com/search?keyword=海南计划新增航班194架次)
 1. [专家：以色列或将面临“双线”作战](https://so.toutiao.com/search?keyword=专家：以色列或将面临“双线”作战)
